Tests. delete bank
