# api/models/questionBank.ts
@@ -2,17 +2,23 @@
  * Created by Voislav on 7/16/2016.
  */
 
-let mongoose = require('mongoose');
+import mongoose = require('mongoose');
 
-let questionBank = mongoose.Schema({
+let questionBank: any = new mongoose.Schema({
     identifier: 'string'
   });
 
-if (!questionBank.options.toJSON) questionBank.options.toJSON = {};
+if (!questionBank.options.toJSON) {
+  questionBank.options.toJSON = {};
+}
+
 questionBank.options.toJSON.transform = (doc, ret, c): any => {
-  console.log('transforming', doc, ret, c);
   delete ret._id;
   return ret;
 };
 
 mongoose.model('QuestionBank', questionBank);
+
+export interface QuestionBank extends mongoose.Document {
+  identifier: string;
+}
